# zix

./: .gitignore  .gitmessage  CONTRIBUTING.md  Cargo.toml  README.md  features.txt  install.sh  installer.ps1  speed.ps1  zix.json
.github/: LICENSE  dispathc.txt
.github/workflows/: update-json.yaml  update-json.yml  update.yml
benches/: bench.rs
ps/: installer.ps1
scripts/: install.ps1  install.sh  speed.ps1  test_dir.sh
src/: app.rs  entry.rs  grid.rs  main.rs  parser.rs  ref_command.rs
src/entry/: create.rs  kind.rs  mod.rs  utils.rs
src/output/: grid.rs  list.rs  mod.rs  tree.rs
web/src/: reset.css  zix-web.ts
zix-cli/: Cargo.toml
zix-cli/src/: app.rs  main.rs  parser.rs  ref_command.rs
zix-cli/src/output/: list.rs  tree.rs
zix-core/: Cargo.toml
zix-core/src/: grid.rs  lib.rs  table.rs  tree.rs
zix-core/src/entry/: create.rs  kind.rs  mod.rs  sets.rs  utils.rs
zix-core/tests/: grid.rs
zix-manager/: Cargo.toml
zix-manager/src/: main.rs  meta.rs
zix-utils/: Cargo.toml
zix-utils/src/: ansi.rs  cli.rs  lib.rs  parser.rs  type_of.rs  window.rs
zix-utils/tests/: parser.rs  type_of.rs
zx/: Cargo.toml
zx/src/: app.rs  main.rs  meta.rs  ref_command.rs
zx/src/output/: grid.rs  list.rs  mod.rs  tree.rs  utils.rs
