[package]
name = "zix"
version = "0.0.2"
edition = "2021"

description = "A simple and fast alternative to the traditional Unix `ls` command, designed specifically for Windows."
license = "MIT"

authors = ["Arki"]
repository = "https://github.com/arkeasz/zix"

[[bin]]
name = "zx"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
crossterm = "0.28.1"
glob = "0.3.1"
terminal_size = "0.4.0"
